--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,10 +11,10 @@
     //         },
     //         "options": {
     //             "nixos": {
-    //                 "expr": "(builtins.getFlake \"/home/jenya/nixos-pc-conf/flake.nix\").nixosConfigurations.pc-full.options"
+    //                 "expr": "(builtins.getFlake \"/home/jenya/nixos-pc-conf/\").nixosConfigurations.pc-full.options"
     //             },
     //             "home-manager": {
-    //                 "expr": "(builtins.getFlake \"/home/jenya/nixos-pc-conf/flake.nix\").homeConfigurations.pc-full.options"
+    //                 "expr": "(builtins.getFlake \"/home/jenya/nixos-pc-conf/\").homeConfigurations.pc-full.options"
     //             }
     //         }
     //     }
