--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "nix.enableLanguageServer": true,
     "nix.serverPath": "nixd",
-    // "nix.serverSettings": {
-    //     // settings for 'nixd' LSP
-    //     "nixd": {
-    //         "formatting": {
-    //             "command": [
-    //                 "nixpkgs-fmt"
-    //             ]
-    //         },
-    //         "options": {
-    //             "nixos": {
-    //                 "expr": "(builtins.getFlake \"/home/jenya/nixos-pc-conf/\").nixosConfigurations.pc-full.options"
-    //             },
-    //             "home-manager": {
-    //                 "expr": "(builtins.getFlake \"/home/jenya/nixos-pc-conf/\").homeConfigurations.pc-full.options"
-    //             }
-    //         }
-    //     }
-    // }
+    "nix.serverSettings": {
+        // settings for 'nixd' LSP
+        "nixd": {
+            "formatting": {
+                "command": [
+                    "nixpkgs-fmt"
+                ]
+            },
+            "options": {
+                "nixos": {
+                    "expr": "(builtins.getFlake \"/home/jenya/nixos-pc-conf/\").nixosConfigurations.pc.options"
+                },
+                "home-manager": {
+                    "expr": "(builtins.getFlake \"/home/jenya/nixos-pc-conf/\").homeConfigurations.jenya.options"
+                }
+            }
+        }
+    }
 }
